sp report fix